--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="google-adsense-account" content="ca-pub-7239841158106431">
     <meta
     name="Hopansh Gahlot "
     content="Hopansh Gahlot Portfolio"
